# quant-mind

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  QM_MCP_ENGINEERING_LOG.md  README.md  ai-dev-guide.md  draft_corrections.md  pyproject.toml  quant_scholar.py
.claude/: settings.json
.claude/rules/: contexts-authoring.md
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  news-e2e.yml  pr-title.yml  pre-commit.yml  stale.yml
contexts/: CONTEXT_MAP.md  README.md
contexts/design/: README.md  positioning.md
contexts/dev/: README.md  github-writing.md  harness-engineering.md  labels.md
contexts/usage/: README.md
docs/: ARCHITECTURE_FOR_NEW_DOMAINS.md  EMBEDDINGS.md  NEWS_PIPELINE.md  README.md  fincept_integration.md  grpo_suitability.md  library.md  papers.md  quant-scholar.json
docs/design/: storage.md
examples/: config_example.py
examples/config/: config_example.py  default_config.yaml  sample_config.yaml
examples/flow/: README.md  content_summary_example.py  simple_flow_examples.py
examples/flows/: batch_usage.py  collect_news.py  news_flow.py  paper.py  token_dashboard.py
examples/llm/: embedding_block_example.py  llm_block_example.py
examples/memory/: 01_basic.py  02_serial_loop.py  03_inspect_trajectory.py  04_custom_run_hooks.py  05_deepseek.py  README.md  basic_memory_usage.py
examples/mind/: paper_structure_retrieval.py  recoverable_memory_demo.py
examples/parser/: simple_llama_parser.py
examples/pipeline/: arxiv_classify_pipeline.py  arxiv_storage_pipeline.py
examples/preprocess/: 01_news_pr_wire.py  02_news_ticker_lists.py  02_wire_ingestion.py  paper_rag.py
examples/rag/: paper.py
examples/storage/: local_storage_usage.py  storage_performance_demo.py
examples/tagger/: llm_tagger_example.py  simple_tagger_example.py
examples/tools/: basic_tool.py  pricing_tool.py  text_stats_tool.py
examples/utils/: prompts.yaml  tmp_usage.py  usage_scope.py
examples/workflow/: README.md  paper_summary_example.py  simple_workflow_examples.py
qm_mcp/: README.md  __init__.py  _smoke_mcp.py  cli.py  config.py  embed.py  grpo_suitability.py  ingest.py  query.py  seed_corpus.txt  server.py  store.py  test_distance_threshold.py  test_grpo_suitability.py
quantmind/: __init__.py  magic.py
quantmind/brain/: __init__.py  agents.py  memory.py
quantmind/config/: __init__.py  embedding.py  flows.py  llm.py  registry.py  settings.py  sources.py  storage.py  taggers.py  workflows.py
quantmind/configs/: __init__.py  base.py  news.py  paper.py  recoverable.py  retrieval.py  structure.py
quantmind/flow/: __init__.py  base.py  podcast_flow.py  qa_flow.py  summary_flow.py
quantmind/flows/: __init__.py  _paper_draft.py  _paper_structure.py  _paper_summary.py  _providers.py  _runner.py  _usage.py  batch.py  governance.py  governance.yaml  news.py  paper.py  structure.py  token_dashboard.py
quantmind/knowledge/: __init__.py  _base.py  _extraction.py  _flatten.py  _tree.py  earnings.py  factor.py  news.py  paper.py  thesis.py
quantmind/llm/: __init__.py  block.py  embedding.py
quantmind/mind/: __init__.py  memory.py  retrieval.py
quantmind/models/: __init__.py  agent.py  analysis.py  content.py  memory.py  messages.py  paper.py  search.py
quantmind/parsers/: base.py  llama_parser.py  pdf_parser.py
quantmind/preprocess/: __init__.py  _news_types.py  news.py  outline.py  pr_newswire.py  time.py  wire.py
quantmind/rag/: __init__.py  document.py
quantmind/research/: __init__.py  paper_analyzer.py  qa_generator.py  tag_analyzer.py
quantmind/sources/: __init__.py  arxiv_source.py  base.py  search_source.py
quantmind/storage/: __init__.py  base.py  local_storage.py
quantmind/tagger/: __init__.py  base.py  llm_tagger.py
quantmind/tools/: __init__.py  _function_type_hints_utils.py  _tool_validation.py  base.py  default_tools.py  utils.py
quantmind/utils/: __init__.py  agentic_ext.py  logger.py  monitoring.py  structured_output.py  tmp.py  usage.py
quantmind/workflow/: __init__.py  analyzer_workflow.py  base.py  paper_summary_workflow.py  qa_workflow.py  summary_workflow.py
scripts/: build_library_example_bundle.py  check_system_deps.py  pre-commit-setup.sh  setup.sh  smoke_wire.py  unittest.sh  verify.sh  verify_news_e2e.py  verify_pdf_rag_e2e.py  verify_structure_e2e.py
scripts/examples/: build_ai_infrastructure_bundle.py
scripts/hooks/: commit_msg_check.py  pre_tool_use_no_bypass.py
tests/: paper_helpers.py  test_contexts.py  test_magic.py  test_verify_news_e2e.py  test_verify_pdf_rag_e2e.py  test_verify_structure_e2e.py
tests/brain/: test_agents.py  test_memory.py
tests/config/: test_embedding.py  test_flow.py  test_llm.py  test_settings.py  test_storage.py
tests/configs/: test_base.py  test_news.py  test_paper.py  test_recoverable.py  test_retrieval.py  test_structure.py
tests/contexts/: test_paper_golden.py
tests/flow/: test_base_flow.py
tests/flows/: test_batch.py  test_governance.py  test_news.py  test_paper.py  test_paper_draft.py  test_providers.py  test_runner.py  test_structure.py  test_token_dashboard.py  test_usage.py
tests/hooks/: _load.py  test_commit_msg_check.py  test_no_bypass_guard.py
tests/knowledge/: test_base.py  test_earnings.py  test_extraction.py  test_factor.py  test_news.py  test_paper.py  test_roundtrip.py  test_structure_tree.py  test_thesis.py  test_tree.py
tests/llm/: test_block.py  test_embedding.py  test_embedding_block.py  test_llm_block.py
tests/mind/: __init__.py  test_memory.py  test_retrieval.py
tests/models/: test_agent_models.py  test_memory_models.py  test_messages_models.py  test_paper.py
tests/parsers/: test_llama_parser.py  test_pdf_parser.py
tests/preprocess/: test_news.py  test_news_models.py  test_news_types.py  test_outline.py  test_pr_newswire.py  test_wire.py
tests/rag/: test_document.py
tests/sources/: test_arxiv_source.py  (+2 more)
wiki/: embedding.md  index.md
(+100 files in other folders)
