[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmind"
version = "0.2.0"
description = "QuantMind - Intelligent Knowledge Extraction and Retrieval Framework"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "pyyaml",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "openai-agents>=0.14",
    "pillow>=10.1.0,<11.0.0",
    "ipykernel>=6.29.5",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.28.1",
    "litellm>=1.74.0.post1",
    "jinja2>=3.0.0",
    "trafilatura>=1.10",
]

[project.optional-dependencies]
# Dev tooling that backs scripts/verify.sh: ruff (format+lint), basedpyright
# (type check), import-linter (architecture contracts), pytest+pytest-cov
# (tests + coverage floor). Black/isort/mypy from the previous toolchain are
# intentionally dropped — ruff and basedpyright supersede them.
dev = [
    "ruff>=0.11,<0.12",
    "basedpyright>=1.39",
    "import-linter>=2.11",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pre-commit>=3.0",
]
full = [
    "marker-pdf>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantmind*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# ----------------------------------------------------------------------------
# ruff: format + lint
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Layered rule selection. D (docstrings) keeps the existing convention;
# F (pyflakes) catches real bugs; I (isort) keeps imports tidy; E/W
# (pycodestyle, minus E501 which ruff format already handles); B (bugbear)
# catches subtle correctness issues.
select = ["D", "E", "F", "I", "W", "B", "W505"]
ignore = [
    # Docstring rules we explicitly waive (see existing convention).
    "D100", "D102", "D104", "D105", "D107", "D203", "D213", "D401", "D402",
    # E501 (line-too-long) is handled by ruff format; flagging it again on
    # long URLs / strings only adds noise.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Tests don't need module/function docstrings or strict bugbear rules.
"tests/**/*.py" = ["D", "B"]
"**/__init__.py" = ["D104", "F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# basedpyright: type checker
# ----------------------------------------------------------------------------
# Strategy: explicit include-list of files that survive PR3-PR5 plus the
# target-architecture module dirs (knowledge/, configs/, preprocess/, flows/,
# mind/). Transitional modules still scheduled for deletion in PR5
# (config/, flow/, llm/, models/{analysis,content,paper}.py) are NOT
# included; they get deleted soon and are not worth modernizing for type
# checks. parsers/, sources/, utils/tmp.py were removed in PR4.

[tool.basedpyright]
include = ["quantmind"]
# Transitional modules excluded from type checking — they get deleted in
# PR5 (per CLAUDE.md "Current Repository State" table). New modules
# (knowledge/, configs/, preprocess/, flows/, mind/, magic.py) automatically
# get type-checked at "standard" mode as they land — no further config needed.
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "quantmind/config",
    "quantmind/flow",
    "quantmind/llm",
    "quantmind/models/analysis.py",
    "quantmind/models/content.py",
    "quantmind/models/paper.py",
]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
# Pydantic v2 discriminated unions tighten a `str` field to `Literal["..."]`
# in subclasses (e.g. `Paper.item_type: Literal["paper"]`). Python's variance
# rules say mutable attributes must be invariant, so basedpyright flags this
# even though Pydantic supports it. We use this idiom throughout knowledge/
# and configs/, so disable the diagnostic globally.
reportIncompatibleVariableOverride = "none"

# ----------------------------------------------------------------------------
# import-linter: architectural boundary contracts
# ----------------------------------------------------------------------------
# Encodes the target architecture: utils, knowledge, and preprocess are
# leaves; configs depends only on knowledge. flows (PR5) and mind (PR6+)
# get their own contracts when they land.

[tool.importlinter]
root_packages = ["quantmind"]

[[tool.importlinter.contracts]]
name = "utils is a leaf (no inbound deps from quantmind packages)"
type = "forbidden"
source_modules = ["quantmind.utils"]
forbidden_modules = [
    "quantmind.config",
    "quantmind.configs",
    "quantmind.flow",
    "quantmind.knowledge",
    "quantmind.llm",
    "quantmind.models",
    "quantmind.preprocess",
]

[[tool.importlinter.contracts]]
name = "knowledge is a leaf (no inbound deps from quantmind packages)"
type = "forbidden"
source_modules = ["quantmind.knowledge"]
forbidden_modules = [
    "quantmind.config",
    "quantmind.configs",
    "quantmind.flow",
    "quantmind.llm",
    "quantmind.models",
    "quantmind.preprocess",
    "quantmind.utils",
]

[[tool.importlinter.contracts]]
name = "configs only depends on knowledge (transitional modules forbidden)"
type = "forbidden"
source_modules = ["quantmind.configs"]
forbidden_modules = [
    "quantmind.config",
    "quantmind.flow",
    "quantmind.llm",
    "quantmind.models",
    "quantmind.preprocess",
]

[[tool.importlinter.contracts]]
name = "preprocess only depends on utils (no inbound deps on configs/knowledge/transitional)"
type = "forbidden"
source_modules = ["quantmind.preprocess"]
forbidden_modules = [
    "quantmind.config",
    "quantmind.configs",
    "quantmind.flow",
    "quantmind.knowledge",
    "quantmind.llm",
    "quantmind.models",
]

# ----------------------------------------------------------------------------
# pytest: configuration + coverage gate
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage floor 65% after PR4 deleted parsers/sources (the low-coverage
# drag) and added preprocess/ at >85% line. Will ratchet to 75% in PR5
# once flow/, llm/, config/, models/{content,paper,analysis}.py are gone.
addopts = [
    "--cov=quantmind",
    "--cov-report=term-missing",
    "--cov-fail-under=65",
    "-ra",
]
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic v1 → v2 transition warnings on transitional model code that
    # gets removed in PR5. Suppress until those modules are gone.
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::pydantic.PydanticDeprecatedSince20",
]

[tool.coverage.run]
source = ["quantmind"]
branch = true
# Transitional modules slated for PR5 deletion. They lost their tests in
# PR4 (parsers/sources tests were dragging the floor down anyway and were
# the only callers of flow/, llm/, config/parsers, config/sources). Once
# PR5 deletes them, this omit list goes empty and the floor ratchets to 75.
omit = [
    "quantmind/flow/*",
    "quantmind/llm/*",
    "quantmind/config/parsers.py",
    "quantmind/config/sources.py",
    "quantmind/config/flows.py",
    "quantmind/config/registry.py",
    "quantmind/models/analysis.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
# Branch coverage. Floor moves with the migration:
#   PR3: 60% (parsers/sources still drag the average down)
#   PR4: 65% (parsers/sources gone; preprocess >85%)
#   PR5: 75% target (flow/, llm/, config/, transitional models/ gone)
